--- a/_talks/20240911_ecsr.md
+++ b/_talks/20240911_ecsr.md
@@ -1,10 +1,12 @@
 ---
 title: 'On my way to ECSR meeting in Barcelona'
+collection: talks
+type: "Conference talk"
+venue: "2024 Meeting of the European Consortium of Sociological Research"
 date: 2024-09-11
-permalink: 
-tags:
-  - conference
+location: "Barcelona"
 ---
+
 
 Presenting "Correcting Misperceptions Does Not Decrease Ideological Polarization" in Barcelona
 ======
