--- a/_publications/20241018105823.md
+++ b/_publications/20241018105823.md
@@ -1,12 +1,14 @@
 ---
-title: "Paper Title Number 1"
+title: "Opinion polarization of immigration and EU attitudes between social classes – the limiting role of working class dissensus"
 collection: publications
-permalink: /publication/2009-10-01-paper-title-number-1
-excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
-date: 2009-10-01
-venue: 'Journal 1'
-paperurl: 'http://academicpages.github.io/files/paper1.pdf'
-citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'
+permalink: /publication/20241018105823
+excerpt: ''
+date: 2024
+venue: 'European Societies'
+paperurl: 'https://doi.org/10.1080/14616696.2024.2312948'
+citation: 'Dochow-Sondershaus, S., & Teney, C. (2024). Opinion polarization of immigration and EU attitudes between social classes – the limiting role of working class dissensus. *European Societies*, 1–32. https://doi.org/10.1080/14616696.2024.2312948'
 ---
+<a href="{{https://doi.org/10.17605/OSF.IO/5D2EW}}">Link to replication package (R and Stata)</a>.
 
-The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
+**Abstract**
+This study examines polarization in political opinions toward immigration and the European Union between occupational classes, i.e. structural polarization. We maintain that two conditions must hold to indicate structural opinion polarization: high between-class divergence and high within-class consensus. Our main contribution is to study these two conditions systematically for a wide variety of immigration and EU-related topics. Using data from four high-quality German surveys spanning three decades, we document three main findings. First, we find substantial between-class divergence: respondents in typical working class occupations express substantially more unfavorable opinions about immigration and the EU than the upper classes across the majority of survey indicators. Second, however, we also observe considerable opinion heterogeneity within the working class. This lack of within-class consensus limits the potential of mobilizing the working class as a group on the basis of anti-immigration and anti-EU sentiments. Third, while we do not document durable increases in structural opinion polarization over time across most of our opinion indicators, we do draw attention to those individual indicators that show relatively high polarization. Overall, our results suggest limited opinion polarization between occupational classes on immigration and EU issues in Germany.
